# llm-lae

./: .gitignore  Modelfile  README.md  analyze.py  evaluate.ipynb  example.env  extract_data.py  pyproject.toml
llm_lae/: conf.py  extract.py  generic_models.py  input_validator.py  llm_client.py  llm_extractor.py  llm_models.py  llm_prompts.py  models.py  prompts.py  rules_extractor.py  rules_models.py  setup_models.py  utils.py  workflow.py
