[project]
name = "llm-lae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.31.0",
    "openai>=1.57.4",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "scikit-learn>=1.6.0",
]

[tool.pyright]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = true

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E", "F", "I"]

[project.scripts]
workflow = "llm_lae.workflow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
